Found overflowing div in Profiles component and fixed it

--- a/chance/src/app/Page-Components/profiles/profiles.component.scss
+++ b/chance/src/app/Page-Components/profiles/profiles.component.scss
@@ -131,7 +131,8 @@
 }
 
 .bio {
-    width: 600px;
+    width: 95%;
+    max-width: 600px;
     text-align: center;
 }
 
